--- a/.github/workflows/make.yaml
+++ b/.github/workflows/make.yaml
@@ -2,8 +2,9 @@ name: make
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
