--- a/.github/workflows/make.yaml
+++ b/.github/workflows/make.yaml
@@ -24,6 +24,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
