--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,10 +1,9 @@
-name: make
+name: publish
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -15,6 +14,9 @@ jobs:
           fetch-depth: 1
       - name: Make all
         run: make all
+      - name: Get TAG
+        id: get_tag
+        run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -33,6 +35,6 @@ jobs:
           file: ./Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-          tags: ghcr.io/openfaas/classic-watchdog:${{ github.sha }}
+          tags: ghcr.io/openfaas/classic-watchdog:${{ TAG }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
