--- a/.github/workflows/ci-only.yaml
+++ b/.github/workflows/ci-only.yaml
@@ -2,16 +2,49 @@ name: ci-only
 
 on:
   push:
-    branches: [ master ]
+    branches:
+    - '*'
   pull_request:
-    branches: [ master ]
+    branches:
+    - '*'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  publish:
+    strategy:
+      matrix:
+        go-version: [ 1.13.x ]
+        os: [ ubuntu-latest ]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@master
         with:
           fetch-depth: 1
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go-version }}
       - name: Make all
         run: make all
+      - name: Get TAG
+        id: get_tag
+        run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: false
+          outputs: type=registry
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          tags: ghcr.io/openfaas/classic-watchdog:${{ steps.get_tag.outputs.TAG }}
