--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: ci-only
+name: 
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
     - '*'
 
 jobs:
-  publish:
+  build:
     strategy:
       matrix:
         go-version: [ 1.13.x ]
@@ -25,9 +25,6 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Make all
         run: make all
-      - name: Get TAG
-        id: get_tag
-        run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -47,4 +44,4 @@ jobs:
           push: false
           outputs: type=registry
           platforms: linux/amd64,linux/arm64,linux/arm/v7
-          tags: ghcr.io/openfaas/classic-watchdog:${{ steps.get_tag.outputs.TAG }}
+          tags: ghcr.io/openfaas/classic-watchdog:${{ github.sha }}
