--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,19 @@ jobs:
           go-version: ${{ matrix.go-version }}
       - name: Make all
         run: make all
+
+      - name: Get Repo Owner
+        id: get_repo_owner
+        run: >
+          echo ::set-output name=repo_owner::$(echo ${{ github.repository_owner }} |
+          tr '[:upper:]' '[:lower:]')
+      - name: Get Repo Name
+        id: get_repo_name
+        run: >
+          echo ::set-output name=repo_name::$(echo ${{ github.repository }} |
+          tr '[:upper:]' '[:lower:]' |
+          awk  -F'/' '{print $2}')
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
