--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,46 +10,38 @@ on:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        go-version: [ 1.17.x ]
-        os: [ ubuntu-latest ]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
         with:
           fetch-depth: 1
       - name: Install Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@master
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: 1.19.x
       - name: Make all
         run: make all
 
+      - name: Get TAG
+        id: get_tag
+        run: echo TAG=${GITHUB_REF#refs/tags/} >> $GITHUB_ENV
+
       - name: Get Repo Owner
         id: get_repo_owner
-        run: >
-          echo ::set-output name=repo_owner::$(echo ${{ github.repository_owner }} |
-          tr '[:upper:]' '[:lower:]')
-      - name: Get Repo Name
-        id: get_repo_name
-        run: >
-          echo ::set-output name=repo_name::$(echo ${{ github.repository }} |
-          tr '[:upper:]' '[:lower:]' |
-          awk  -F'/' '{print $2}')
+        run: echo "REPO_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" > $GITHUB_ENV
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Test and Build multiarch
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: ./
           file: ./Dockerfile
           outputs: "type=image,push=false"
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           tags: |
-            ghcr.io/${{ steps.get_repo_owner.outputs.repo_owner }}/${{ steps.get_repo_name.outputs.repo_name }}:${{ github.sha }}
+            ghcr.io/${{ env.REPO_OWNER }}/classic-watchdog:${{ github.sha }}
