--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -60,9 +60,9 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           tags: |
-            ghcr.io/${{ steps.get_repo_owner.outputs.repo_owner }}/classic-watchdog:${{ github.sha }}
-            ghcr.io/${{ steps.get_repo_owner.outputs.repo_owner }}/classic-watchdog:${{ steps.get_tag.outputs.TAG }}
-            ghcr.io/${{ steps.get_repo_owner.outputs.repo_owner }}/classic-watchdog:latest
+            ghcr.io/${{ env.REPO_OWNER }}/classic-watchdog:${{ github.sha }}
+            ghcr.io/${{ env.REPO_OWNER }}/classic-watchdog:${{ steps.get_tag.outputs.TAG }}
+            ghcr.io/${{ env.REPO_OWNER }}/classic-watchdog:latest
 
       - name: Upload release binaries
         uses: alexellis/upload-assets@0.4.0
