--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,11 +20,11 @@ jobs:
       statuses: read
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 1
       - name: Install Go
-        uses: actions/setup-go@master
+        uses: actions/setup-go@v5
         with:
           go-version: 1.23.x
 
